feat(content): add article prompt contract v2